# swap

./: LICENSE  README.md  concept_extractor.py  helpers.py  main.py  pyproject.toml  swap.py  translator.py
conceptos/: bbva.csv  bbva.json  bind.json  supervielle.csv  supervielle.json
extractos/: bbva.csv  bind.csv  supervielle.csv
post_process/: supervielle.csv  supervielle.xlsx
recategorization/: supervielle.csv  supervielle.xlsx
src/: bank.py  bbva.py  bind.py  constants.py  supervielle.py
src/extractors/: __init__.py  bbva.py  bind.py  supervielle.py
src/helpers/: __init__.py
src/translators/: bbva.py  supervielle.py
taxes/: supervielle.json
transfers/: supervielle.csv  supervielle.json  supervielle.xlsx
translations/: bbva.csv  bind.csv  supervielle.csv
